[project]
name = "langgraph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.7",
    "jupyterlab>=4.2.5",
    "langchain>=0.3.1",
    "langchain-community>=0.3.1",
    "langchain-openai>=0.2.0",
    "langchainhub>=0.1.21",
    "langgraph>=0.2.28",
    "tavily-python>=0.5.0",
    "tiktoken>=0.7.0",
]
